mailfolder member..pom.xml web.xml tiles layout header massage.jsp 등등...

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,9 @@ version="4.0">
 			/WEB-INF/spring/servlet-context.xml
 			/WEB-INF/spring/aop-context.xml
 			<!-- /WEB-INF/spring/file-context.xml -->
+			
+			<!-- email -->
+			/WEB-INF/spring/email-context.xml
 		</param-value>
 	</init-param>
 	
