--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@ version="4.0">
 		<param-value>
 			/WEB-INF/spring/servlet-context.xml
 			/WEB-INF/spring/aop-context.xml
-			<!-- /WEB-INF/spring/file-context.xml -->
+			/WEB-INF/spring/file-context.xml
 			
 			<!-- email -->
 			/WEB-INF/spring/email-context.xml
